# cota_parlamentar

./: .env.example  .gitignore  README-en.md  README.md  pyproject.toml  requirements.txt
cota_parlamentar/: getNFE.py  getSecretaries.py  xmlProcessor.py
cota_parlamentar/helpers/: captcha.py  csv2MongoDb.py  seleniumDriver.py  util.py
data/: Secretarios.csv
info/: nf_link_samples.txt
tests/: test_cota_parlamentar.py
